Use @@ notation inside l3fp

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -128,8 +128,8 @@
 %   \Arg{X_1} \Arg{X_2} \Arg{X_3} \Arg{X_4} |;|
 % \end{quote}
 % Here, the \meta{exponent} is an integer, between
-% $-\ExplSyntaxOn\int_use:N\c__fp_minus_min_exponent_int$ and
-% $\ExplSyntaxOn\int_use:N\c__fp_max_exponent_int$.  The body consists
+% $-\ExplSyntaxOn\int_use:N\c_@@_minus_min_exponent_int$ and
+% $\ExplSyntaxOn\int_use:N\c_@@_max_exponent_int$.  The body consists
 % in four blocks of exactly $4$ digits,
 % $0000 \leq \meta{X_i} \leq 9999$, and the floating point is
 % \[
@@ -526,7 +526,7 @@
 %
 % \begin{macro}[EXP]{\@@_if_type_fp:NTwFw}
 %   Used as \cs{@@_if_type_fp:NTwFw} \meta{marker} \Arg{true code}
-%   \cs{s__fp} \Arg{false code} \cs{q_stop}, this test whether the
+%   \cs{s_@@} \Arg{false code} \cs{q_stop}, this test whether the
 %   \meta{marker} is \cs{s_@@} or not and runs the appropriate
 %   \meta{code}.  The very unusual syntax is for optimization purposes
 %   as that function is used for all floating point operations.
@@ -557,7 +557,7 @@
 %   {\@@_type_from_scan:N, \@@_type_from_scan_other:N, \@@_type_from_scan:w}
 %   Used as \cs{@@_type_from_scan:N} \meta{token}.
 %   Grabs the pieces of the stringified \meta{token} which lies after
-%   the first |s__fp|.  If the \meta{token} does not contain that
+%   the first |s_@@|.  If the \meta{token} does not contain that
 %   string, the result is |_?|.
 %    \begin{macrocode}
 \cs_new:Npn \@@_type_from_scan:N #1
@@ -624,7 +624,7 @@
 %   The |Nnw| function simply dispatches to the appropriate
 %   \cs[no-index]{@@_exp_after\ldots{}_f:nw} with \enquote{\ldots{}}
 %   (either empty or |_|\meta{type}) extracted from |#1|, which should
-%   start with |\s__fp|.  If it doesn't start with |\s__fp| the function
+%   start with |\s_@@|.  If it doesn't start with |\s_@@| the function
 %   \cs{@@_exp_after_?_f:nw} defined in \pkg{l3fp-parse} gives an error;
 %   another special \meta{type} is |stop|, useful for loops, see below.
 %   The |nw| function has an important optimization for floating points
