--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -936,7 +936,7 @@
 %   Empty a \tn{toks} or set it to a value, given its number.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_toks_clear:N #1
-  { \tex_toks:D #1 { } }
+  { \@@_toks_set:Nn #1 { } }
 \cs_new_eq:NN \@@_toks_set:Nn \tex_toks:D
 \cs_new_protected:Npn \@@_toks_set:No #1
   { \@@_toks_set:Nn #1 \exp_after:wN }
