Drop \__int_eval:n
Very slight performance hit here:
where that is vital we will need copies of the primitives.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2356,7 +2356,7 @@
 %   The primitive always assigns the seed globally.
 %    \begin{macrocode}
 \cs_new_protected:Npn \sys_gset_rand_seed:n #1
-  { \pdftex_setrandomseed:D \__int_eval:n {#1} }
+  { \pdftex_setrandomseed:D \int_eval:n {#1} \exp_stop_f: }
 %    \end{macrocode}
 % \end{macro}
 %
