--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2017 The LaTeX3 Project
+%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2018 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -205,7 +205,7 @@
 %    \begin{macrocode}
 \cs_new_eq:NN \mathgroup_use:N \tex_fam:D
 \cs_new:Npn \mathgroup_use:n #1
-  { \tex_fam:D \__int_eval:n {#1} }
+  { \tex_fam:D \int_eval:n {#1} \exp_stop_f: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2197,7 +2197,7 @@
 %   of the current font.
 %    \begin{macrocode}
 \DeclareDocumentCommand \symbol {m}
-  { \tex_char:D \__int_eval:n {#1} }
+  { \tex_char:D \int_eval:n {#1} \exp_stop_f: }
 %    \end{macrocode}
 % \end{macro}
 %
