--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1386,7 +1386,7 @@
   {
     \exp:w
       \exp_after:wN \@@_replicate_first:N
-        \__int_value:w \__int_eval:n {#1}
+        \__int_value:w \int_eval:n {#1}
       \cs_end:
   }
 \cs_new:Npn \@@_replicate:N #1
