--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1497,7 +1497,7 @@
   }
 \cs_new:Npn \str_item_ignore_spaces:nn #1
   { \exp_args:No \@@_item:nn { \tl_to_str:n {#1} } }
-\__kernel_patch_args:nNNpn { {#1} { \__int_eval:n {#2} } }
+\__kernel_patch_args:nNNpn { {#1} { \int_eval:n {#2} } }
 \cs_new:Npn \@@_item:nn #1#2
   {
     \exp_after:wN \@@_item:w
@@ -1595,7 +1595,7 @@
 \cs_new:Npn \str_range_ignore_spaces:nnn #1
   { \exp_args:No \@@_range:nnn { \tl_to_str:n {#1} } }
 \__kernel_patch_args:nNNpn
-  { {#1} { \__int_eval:n {#2} } { \__int_eval:n {#3} } }
+  { {#1} { \int_eval:n {#2} } { \int_eval:n {#3} } }
 \cs_new:Npn \@@_range:nnn #1#2#3
   {
     \exp_after:wN \@@_range:w
