--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -6,7 +6,7 @@
 %<*ins>
 \iffalse meta-comment
 
-File l3auxdata.ins Copyright (C) 2014,2017 The LaTeX3 Project
+File l3auxdata.ins Copyright (C) 2014,2017,2018 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -733,7 +733,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
         \prop_put:Nxx \l_@@_catcodes_prop
           { \int_eval:n {##1} }
           { \tex_the:D \tex_catcode:D \int_eval:n {##1} }
-        \tex_catcode:D \int_eval:n {##1} = \__int_eval:n {##2}
+        \tex_catcode:D \int_eval:n {##1} = \int_eval:n {##2} \exp_stop_f:
       }
   }
 %    \end{macrocode}
@@ -742,7 +742,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 \cs_new:Nn \@@_catcodes_pop:
   {
     \cs_set_protected:Npn \char_set_catcode:nn ##1 ##2
-      { \tex_catcode:D \int_eval:n {##1} = \__int_eval:n {##2} }
+      { \tex_catcode:D \int_eval:n {##1} = \int_eval:n {##2} \exp_stop_f: }
     \prop_map_inline:Nn \l_@@_catcodes_prop
       { \char_set_catcode:nn {##1} {##2} }
     \prop_clear:N \l_@@_catcodes_prop
