--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3check.dtx (C) Copyright 2012-2017 The LaTeX3 Project
+%% File l3check.dtx (C) Copyright 2012-2018 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1679,7 +1679,7 @@
         { \@@_error:nn { internal } { Cannot~patch~\__cs_generate_variant_loop_end:nwwwNNnn } }
       \cs_set_protected:Npn \check_tmp:w #1#2#3#4#5
         {
-          \tex_catcode:D `#1 = \__int_eval:n {#2}
+          \tex_catcode:D `#1 = \int_eval:n {#2} \exp_stop_f:
           #3 { \tex_catcode:D `#1 / 2 } = { 6 }
             {
               \group_begin: \exp_args:NNc \group_end:
@@ -1690,7 +1690,7 @@
         {
           \cs_gset_protected:Npn \__char_set_catcode:NnNNN #1#2#3#4#5
             {
-              \tex_catcode:D `#1 = \__int_eval:n {#2}
+              \tex_catcode:D `#1 = \int_eval:n {#2} \exp_stop_f:
               #3 { \tex_catcode:D `#1 / 2 } = { 6 }
                 {
                   \group_begin: \exp_after:wN \group_end:
