--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3kernel-extras.dtx (C) Copyright 2012-2017 The LaTeX3 Project
+%% File l3kernel-extras.dtx (C) Copyright 2012-2018 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -936,7 +936,7 @@
   {
     \__int_value:w
       \__dim_eval:n
-        { #2 \__dim_eval:n { \__int_eval:n {#1} sp } }
+        { #2 \__dim_eval:n { \int_eval:n {#1} sp } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1138,7 +1138,7 @@
   }
 \prg_new_conditional:Npnn \__char_if_in_font:nN #1#2 { TF }
   {
-    \etex_iffontchar:D #2 \__int_eval:n {#1}
+    \etex_iffontchar:D #2 \int_eval:n {#1} \exp_stop_f:
       \prg_return_true:
     \else:
       \prg_return_false:
