Continuing to remove cross-module \__int_ usage
This covers many (though not all) of the \__int cases.

In the main, where there is a single use in a module, I've gone for
\int_eval:n even if there is a performance loss. Where multiple uses are
present, I've favoured keeping primitive access. Both of these choices
may need to be looked at: there are performance issues in some cases but
not in others, I suspect.

We may want to think about \number: often we've used it to allow
\exp_after:wN to an integer in one step.

A few more of these to do yet, some of which need rewrites of bits and
pieces.

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -205,7 +205,7 @@
 %   Get the appropriate \tn{fontdimen} and perform bound checks if requested.
 %    \begin{macrocode}
 \cs_new:Npn \@@_item_fast:Nn #1#2
-  { \__int_value:w \tex_fontdimen:D \int_eval:n {#2} #1 }
+  { \int_eval:n { \tex_fontdimen:D \int_eval:n {#2} #1 } }
 \cs_new:Npn \@@_item:Nn #1#2
   { \exp_args:Nf \@@_item_aux:Nn #1 { \int_eval:n {#2} } }
 \cs_new:Npn \@@_item_aux:Nn #1#2
