--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -994,6 +994,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\@@_int_value:w}
+%   Used for expansion behavior.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_int_value:w \tex_number:D
+%     \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\bool_if_p:n}
 %   First issue a \cs{group_align_safe_begin:} as we are using |&&| as
 %   syntax shorthand for the And operation and we need to hide it for
@@ -1068,19 +1075,19 @@
 \cs_new:cpn { @@_(:Nw } #1#2
   {
     \exp_after:wN \@@_choose:NNN \exp_after:wN #1
-    \__int_value:w \@@_get_next:NN \use_i:nnnn
+    \@@_int_value:w \@@_get_next:NN \use_i:nnnn
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\@@_p:Nw}
 %   If what follows GetNext is neither |!| nor |(|, evaluate the
-%   predicate using the primitive \cs{__int_value:w}.  The canonical
+%   predicate using the primitive \cs{@@_int_value:w}.  The canonical
 %   \texttt{true} and \texttt{false} values have numerical values $1$
 %   and $0$ respectively.  Look for And, Or or Close afterwards.
 %    \begin{macrocode}
 \cs_new:cpn { @@_p:Nw } #1
-  { \exp_after:wN \@@_choose:NNN \exp_after:wN #1 \__int_value:w }
+  { \exp_after:wN \@@_choose:NNN \exp_after:wN #1 \@@_int_value:w }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1322,6 +1329,7 @@
 %
 % \begin{macro}{\prg_replicate:nn}
 % \UnitTested
+% \begin{macro}{\@@_replicate_first:n, \@@_replicate_first:f}
 % \begin{macro}{\@@_replicate:N, \@@_replicate_first:N}
 % \begin{macro}{\@@_replicate_}
 % \begin{macro}
@@ -1385,10 +1393,11 @@
 \cs_new:Npn \prg_replicate:nn #1
   {
     \exp:w
-      \exp_after:wN \@@_replicate_first:N
-        \__int_value:w \int_eval:n {#1}
-      \cs_end:
+      \@@_replicate_first:f { \int_eval:n {#1} }
   }
+\cs_new:Npn \@@_replicate_first:n #1
+  { \@@_replicate_first:N #1 \cs_end: }
+\cs_generate_variant:Nn \@@_replicate_first:n { f }
 \cs_new:Npn \@@_replicate:N #1
   { \cs:w @@_replicate_#1 :n \@@_replicate:N }
 \cs_new:Npn \@@_replicate_first:N #1
@@ -1438,6 +1447,7 @@
 \cs_new:cpn { @@_replicate_first_8:n } #1 { \exp_end: #1#1#1#1#1#1#1#1 }
 \cs_new:cpn { @@_replicate_first_9:n } #1 { \exp_end: #1#1#1#1#1#1#1#1#1 }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
