--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1326,15 +1326,17 @@
 %
 % \begin{macro}{\dim_ratio:nn}
 % \begin{macro}{\@@_ratio:n}
+% \begin{macro}{\@@_int_value:w}
 %   With dimension expressions, something like |10 pt * ( 5 pt / 10 pt )| does
 %   not work. Instead, the ratio part needs to be converted to an integer
-%   expression. Using \cs{__int_value:w} forces everything into |sp|, avoiding
+%   expression. Using \cs{@@_int_value:w} forces everything into |sp|, avoiding
 %   any decimal parts.
 %    \begin{macrocode}
 \cs_new:Npn \dim_ratio:nn #1#2
   { \@@_ratio:n {#1} / \@@_ratio:n {#2} }
 \cs_new:Npn \@@_ratio:n #1
-  { \__int_value:w \@@_eval:w (#1) \@@_eval_end: }
+  { \@@_int_value:w \@@_eval:w (#1) \@@_eval_end: }
+\cs_new_eq:NN \@@_int_value:w \tex_number:D
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
