--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1354,6 +1354,17 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}
+%   {\@@_int_eval:w, \@@_int_to_roman:w, \@@_int_value:w}
+%   Access to primitives: the code here uses the expansion behaviors for
+%   efficiency.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
+\cs_new_eq:NN \@@_int_value:w \tex_number:D
+%     \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\char_generate:nn}
 % \begin{macro}[EXP]{\__kernel_char_generate:nn}
 % \begin{macro}[EXP]{\@@_generate_aux:nn}
@@ -1371,14 +1382,14 @@
 \cs_new:Npn \char_generate:nn #1#2
   {
     \exp:w \exp_after:wN \@@_generate_aux:w
-      \__int_value:w \__int_eval:w #1 \exp_after:wN ;
-      \__int_value:w \__int_eval:w #2 ;
+      \@@_int_value:w \@@_int_eval:w #1 \exp_after:wN ;
+      \@@_int_value:w \@@_int_eval:w #2 ;
   }
 \cs_new:Npn \__kernel_char_generate:nn #1#2
   {
     \exp:w \exp_after:wN
       \@@_generate_aux:nnw \exp_after:wN
-        { \__int_value:w \__int_eval:w #1 } {#2} \exp_end:
+        { \@@_int_value:w \@@_int_eval:w #1 } {#2} \exp_end:
   }
 %    \end{macrocode}
 %   Before doing any actual conversion, first some special case filtering.
@@ -1532,7 +1543,7 @@
           \exp_args:Nx \tex_lowercase:D
             {
               \tl_const:Nn
-                \exp_not:c { c_@@_ \__int_to_roman:w #1 _tl }
+                \exp_not:c { c_@@_ \@@_int_to_roman:w #1 _tl }
                 { \exp_not:o \l_@@_tmp_tl }
             }
         }
@@ -1555,7 +1566,7 @@
           \exp_after:wN \exp_after:wN
           \if_case:w #2
             \exp_last_unbraced:Nv \exp_stop_f:
-              { c_@@_ \__int_to_roman:w #1 _tl }
+              { c_@@_ \@@_int_to_roman:w #1 _tl }
           \fi:
         }
   \fi:
