--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -435,6 +435,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_toks:NN, \@@_toks:NNw}
+% \begin{macro}{\@@_int_eval:w, \@@_int_value:w}
 %   Unpack the various \tn{toks} registers, from \cs{l_@@_min_int} to
 %   $\cs{l_@@_top_int}-1$. The functions |#1| and |#2| allow us to treat
 %   the three data structures in a unified way:
@@ -448,6 +449,7 @@
 %     \cs{clist_wrap_item:n} do the work of putting a comma and possibly
 %     braces.
 %   \end{itemize}
+%   For expansion behaviour we need a couple of primitives.
 %    \begin{macrocode}
 \cs_new:Npn \@@_toks:NN #1#2
   { \@@_toks:NNw #1 #2 \l_@@_min_int ; }
@@ -456,10 +458,13 @@
     \if_int_compare:w #3 < \l_@@_top_int
       #1 #2 { \tex_the:D \tex_toks:D #3 }
       \exp_after:wN \@@_toks:NNw \exp_after:wN #1 \exp_after:wN #2
-      \__int_value:w \__int_eval:w #3 + 1 \exp_after:wN ;
+      \@@_int_value:w \@@_int_eval:w #3 + 1 \exp_after:wN ;
     \fi:
   }
+\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_value:w \tex_number:D
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Merge sort}
