--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1096,9 +1096,9 @@
 %
 % \section{Internal functions}
 %
-% \begin{function}[EXP, added = 2016-03-25]{\__char_generate:nn}
+% \begin{function}[EXP]{\__kernel_char_generate:nn}
 %   \begin{syntax}
-%      \cs{__char_generate:nn} \Arg{charcode} \Arg{catcode}
+%      \cs{__kernel_char_generate:nn} \Arg{charcode} \Arg{catcode}
 %   \end{syntax}
 %   This function is identical in operation to the public
 %   \cs{char_generate:nn} but omits various sanity tests. In particular, this
@@ -1355,7 +1355,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\char_generate:nn}
-% \begin{macro}[EXP]{\__char_generate:nn}
+% \begin{macro}[EXP]{\__kernel_char_generate:nn}
 % \begin{macro}[EXP]{\@@_generate_aux:nn}
 % \begin{macro}[EXP]{\@@_generate_aux:nnw}
 % \begin{variable}{\l_@@_tmp_tl}
@@ -1374,7 +1374,7 @@
       \__int_value:w \__int_eval:w #1 \exp_after:wN ;
       \__int_value:w \__int_eval:w #2 ;
   }
-\cs_new:Npn \__char_generate:nn #1#2
+\cs_new:Npn \__kernel_char_generate:nn #1#2
   {
     \exp:w \exp_after:wN
       \@@_generate_aux:nnw \exp_after:wN
