Revert "Use @@ notation inside l3fp"
This reverts commit a9a76dee41aaea2c05eff139f1b1871735b76497.
Most of the changes were incorrect because the @@ notation is not changed to
the module name in verbatim and similar places.

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -293,7 +293,7 @@
 % expands to
 % \begin{quote}
 %   \meta{number}\\
-%   |  \@@_parse_infix_|\meta{operator}|:N| \meta{precedence}
+%   |  \__fp_parse_infix_|\meta{operator}|:N| \meta{precedence}
 % \end{quote}
 % expanding the \texttt{infix} auxiliary before leaving the above in the
 % input stream.
@@ -304,7 +304,7 @@
 % being computed as |(1-2)-3|, but |2^3^4| should be evaluated as
 % |2^(3^4)| instead.  For this reason, and to support the equivalence
 % between |**| and~|^| more easily, each binary operator is converted to
-% a control sequence |\@@_parse_infix_|\meta{operator}|:N| when it is
+% a control sequence |\__fp_parse_infix_|\meta{operator}|:N| when it is
 % encountered for the first time.  Instead of passing both precedences
 % to a test function to do the comparison steps above, we pass the
 % \meta{precedence} (of the earlier operator) to the \texttt{infix}
@@ -312,7 +312,7 @@
 % perform the computation of the \meta{operator}.  If it should not be
 % performed, the \texttt{infix} auxiliary expands to
 % \begin{syntax}
-%   |@| \cs{use_none:n} |\@@_parse_infix_|\meta{operator}|:N|
+%   |@| \cs{use_none:n} |\__fp_parse_infix_|\meta{operator}|:N|
 % \end{syntax}
 % and otherwise it calls \cs{@@_parse_operand:Nw} with the precedence of
 % the \meta{operator} to find its second operand \meta{number_2} and the
@@ -320,7 +320,7 @@
 % \begin{syntax}
 %   |@| \cs{@@_parse_apply_binary:NwNwN}
 %   ~~~~\meta{operator} \meta{number_2}
-%   |@| |\@@_parse_infix_|\meta{operator_2}|:N|
+%   |@| |\__fp_parse_infix_|\meta{operator_2}|:N|
 % \end{syntax}
 % The \texttt{infix} function is responsible for comparing precedences,
 % but cannot directly call the computation functions, because the first
@@ -343,7 +343,7 @@
 % \begin{syntax}
 %   \cs{@@_parse_continue:NwN} \meta{precedence}
 %   \meta{number} |@|
-%   \cs{use_none:n} |\@@_parse_infix_|\meta{operator}|:N|
+%   \cs{use_none:n} |\__fp_parse_infix_|\meta{operator}|:N|
 % \end{syntax}
 % or
 % \begin{syntax}
@@ -351,18 +351,18 @@
 %   \meta{number} |@|
 %   \cs{@@_parse_apply_binary:NwNwN}
 %   ~~\meta{operator} \meta{number_2}
-%   |@| |\@@_parse_infix_|\meta{operator_2}|:N|
+%   |@| |\__fp_parse_infix_|\meta{operator_2}|:N|
 % \end{syntax}
 % The definition of \cs{@@_parse_continue:NwN} is then very simple:
 % \begin{syntax}
-%   |\cs_new:Npn \@@_parse_continue:NwN #1#2@#3 { #3 #1 #2 @ }|
+%   |\cs_new:Npn \__fp_parse_continue:NwN #1#2@#3 { #3 #1 #2 @ }|
 % \end{syntax}
 % In the first case, |#3|~is \cs{use_none:n}, yielding
 % \begin{syntax}
 %   \cs{use_none:n} \meta{precedence} \meta{number} |@|
-%   |\@@_parse_infix_|\meta{operator}|:N|
+%   |\__fp_parse_infix_|\meta{operator}|:N|
 % \end{syntax}
-% then \meta{number} |@| |\@@_parse_infix_|\meta{operator}|:N|.  In
+% then \meta{number} |@| |\__fp_parse_infix_|\meta{operator}|:N|.  In
 % the second case, |#3|~is \cs{@@_parse_apply_binary:NwNwN}, whose role
 % is to compute \meta{number} \meta{operator} \meta{number_2} and to
 % prepare for the next comparison of precedences: first we get
@@ -370,18 +370,18 @@
 %   \cs{@@_parse_apply_binary:NwNwN}
 %   ~~\meta{precedence} \meta{number} |@|
 %   ~~\meta{operator} \meta{number_2}
-%   |@| |\@@_parse_infix_|\meta{operator_2}|:N|
+%   |@| |\__fp_parse_infix_|\meta{operator_2}|:N|
 % \end{syntax}
 % then
 % \begin{syntax}
 %   \cs{exp_after:wN} \cs{@@_parse_continue:NwN}
 %   \cs{exp_after:wN} \meta{precedence}
 %   \cs{exp:w} \cs{exp_end_continue_f:w}
-%   |\@@_|\meta{operator}|_o:ww| \meta{number} \meta{number_2}
+%   |\__fp_|\meta{operator}|_o:ww| \meta{number} \meta{number_2}
 %   \cs{exp:w} \cs{exp_end_continue_f:w}
-%   |\@@_parse_infix_|\meta{operator_2}|:N| \meta{precedence}
+%   |\__fp_parse_infix_|\meta{operator_2}|:N| \meta{precedence}
 % \end{syntax}
-% where |\@@_|\meta{operator}|_o:ww| computes \meta{number}
+% where |\__fp_|\meta{operator}|_o:ww| computes \meta{number}
 % \meta{operator} \meta{number_2} and expands after the result, thus
 % triggers the comparison of the precedence of the \meta{operator_2} and
 % the \meta{precedence}, continuing the loop.
@@ -501,7 +501,7 @@
 %     juxtaposition, as letters cannot be proper infix operators.
 %   \item Otherwise (including in the case of digits), if the token is a
 %     known infix operator, the appropriate
-%     |\@@_infix_|\meta{operator}|:N| function is built, and if it
+%     |\__fp_infix_|\meta{operator}|:N| function is built, and if it
 %     does not exist, we complain.  In particular, the juxtaposition
 %     |\c_zero 2| is disallowed.
 % \end{itemize}
@@ -572,7 +572,7 @@
 %   Reads the \enquote{\ttfamily\ldots{}}, performing every computation
 %   with a precedence higher than \meta{precedence}, then expands to
 %   \begin{syntax}
-%     \meta{result} |@| |\@@_parse_infix_|\meta{operation}|:N| \ldots{}
+%     \meta{result} |@| |\__fp_parse_infix_|\meta{operation}|:N| \ldots{}
 %   \end{syntax}
 %   where the \meta{operation} is the first operation with a lower
 %   precedence, possibly \texttt{end}, and the
@@ -605,11 +605,11 @@
 %   \meta{operation} has a precedence higher than \meta{precedence},
 %   expands to
 %   \begin{syntax}
-%     \meta{operand_1} |@| \cs{@@_parse_apply_binary:NwNwN} \meta{operation} \meta{operand_2} |@| |\@@_parse_infix_|\meta{operation_2}|:N| \ldots{}
+%     \meta{operand_1} |@| \cs{@@_parse_apply_binary:NwNwN} \meta{operation} \meta{operand_2} |@| |\__fp_parse_infix_|\meta{operation_2}|:N| \ldots{}
 %   \end{syntax}
 %   and otherwise expands to
 %   \begin{syntax}
-%     \meta{operand} |@| \cs{use_none:n} |\@@_parse_infix_|\meta{operation}|:N| \ldots{}
+%     \meta{operand} |@| \cs{use_none:n} |\__fp_parse_infix_|\meta{operation}|:N| \ldots{}
 %   \end{syntax}
 % \end{macro}
 %
@@ -753,7 +753,7 @@
 %   \end{itemize}
 %   This scheme is extensible: additional types can be added by starting
 %   the variables with a scan mark of the form \cs[no-index]{s_@@_\meta{type}} and
-%   defining |\@@_exp_after_|\meta{type}|_f:nw|.  In all cases, we
+%   defining |\__fp_exp_after_|\meta{type}|_f:nw|.  In all cases, we
 %   make sure that the second argument of \cs{@@_parse_infix:NN} is
 %   correctly expanded.
 %   A special case only enabled in \LaTeXe{} is that if \tn{protect} is
@@ -936,7 +936,7 @@
 %   If it is an \textsc{ascii} letter, \cs{@@_parse_letters:N} beyond this one and give
 %   the result to \cs{@@_parse_word:Nw}.  Otherwise, the character is
 %   assumed to be a prefix operator, and we build
-%   |\@@_parse_prefix_|\meta{operator}|:Nw|.
+%   |\__fp_parse_prefix_|\meta{operator}|:Nw|.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_one_other:NN #1 #2
   {
@@ -1059,11 +1059,11 @@
 %
 % Numbers are parsed as follows: first we trim leading zeros, then
 % if the next character is a digit, start reading a significand $\geq 1$
-% with the set of functions |\@@_parse_large|\ldots{}; if it is a
+% with the set of functions |\__fp_parse_large|\ldots{}; if it is a
 % period, the significand is~$<1$; and otherwise it is zero.  In the
 % second case, trim additional zeros after the period, counting them for
 % an exponent shift $\meta{exp_1}<0$, then read the significand with the
-% set of functions |\@@_parse_small|\ldots{} Once the significand is
+% set of functions |\__fp_parse_small|\ldots{} Once the significand is
 % read, read the exponent if |e|~is present.
 %
 % \begin{macro}[rEXP]{\@@_parse_trim_zeros:N, \@@_parse_trim_end:w}
@@ -1831,7 +1831,7 @@
 %   The unary~|-| and boolean not are harder: we parse the operand using
 %   a precedence equal to the maximum of the previous precedence~|##1|
 %   and the precedence \cs{c_@@_prec_not_int} of the unary operator, then call
-%   the appropriate |\@@_|\meta{operation}|_o:w| function,
+%   the appropriate |\__fp_|\meta{operation}|_o:w| function,
 %   where the \meta{operation} is |set_sign| or |not|.
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:w #1#2#3#4
@@ -2316,7 +2316,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[verb, EXP]{\@@_parse_infix_,:N}
+% \begin{macro}[verb, EXP]{\__fp_parse_infix_,:N}
 % \begin{macro}[EXP]{\@@_parse_infix_comma:w, \@@_parse_apply_comma:NwNwN}
 %   As for other infix operations, if the previous operations has higher
 %   precedence the comma waits.  Otherwise we call
@@ -2796,7 +2796,7 @@
 % \begin{macro}{\@@_new_function:NNnnn, \@@_new_function:Ncfnn}
 % \begin{macro}{\@@_function_args:Nwn}
 %   Save the code provided by the user in the control sequence
-%   |\@@_user_#1|.  Define |#1| to call \cs{@@_function_apply:nw}
+%   |\__fp_user_#1|.  Define |#1| to call \cs{@@_function_apply:nw}
 %   after parsing one operand using \cs{@@_parse_operand:Nw} with
 %   precedence~$16$.  The auxiliary \cs{@@_function_args:Nwn} receives
 %   the user function and the number of arguments (half of the number of
