--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1429,8 +1429,8 @@
 %     hard-code the logarithms of $44$ small integers instead of $9$.
 %   \item Improve notations in the explanations of the division
 %     algorithm (\pkg{l3fp-basics}).
-%   \item Understand and document \cs{_@@_basics_pack_weird_low:NNNNw}
-%     and \cs{_@@_basics_pack_weird_high:NNNNNNNNw} better.  Move the
+%   \item Understand and document \cs{__fp_basics_pack_weird_low:NNNNw}
+%     and \cs{__fp_basics_pack_weird_high:NNNNNNNNw} better.  Move the
 %     other \texttt{basics_pack} auxiliaries to \pkg{l3fp-aux} under a
 %     better name.
 %   \item Find out if underflow can really occur for trigonometric
